# Projects

Heart_Disease_Prediction_using_Logistic_Regression/: Heart_Disease_Prediction_using_Logistic_Regression.ipynb
RayTracing/: CMakeLists.txt  README.md
RayTracing/include/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
RayTracing/src/: Scene_rays.cpp  after_refactoring.cpp  hit_objects_3.cpp  main.cpp
Weighing Buddy/: AISSMS_IOIT_PROJECT.ino  IOIT PPT.pptx  IOIT Project Report.docx
